--- a/Quiz.css
+++ b/Quiz.css
@@ -1,9 +1,27 @@
 .container{
-    margin-top: 10%;
+    margin-top: 5%;
+}
+
+#js-start{
+    margin: 25% 0 10% 0;
+    width: 300px;
+    height: 125px;
+    font-size: 2rem;
 }
 
 .alert{
     text-align: center;
+}
+
+#js-attention{
+    text-align: center;
+    margin: 0 25%;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.num{
+    color: red;
 }
 
 #js-reset{
